--- a/website/package.json
+++ b/website/package.json
@@ -10,15 +10,16 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@acab/reset.css": "^0.7.0",
-		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/kit": "^1.24.1",
+		"@acab/reset.css": "^0.10.0",
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/kit": "^2.8.0",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"postcss": "latest",
-		"postcss-use-logical": "*",
 		"postcss-scss": "latest",
-		"svelte": "^4.2.0",
-		"svelte-check": "^3.5.1",
-		"typescript": "^5.2.2",
-		"vite": "^4.4.9"
+		"postcss-use-logical": "workspace:*",
+		"svelte": "^5.1.13",
+		"svelte-check": "^4.0.6",
+		"typescript": "^5.6.3",
+		"vite": "^5.4.10"
 	}
 }
