--- a/website/package.json
+++ b/website/package.json
@@ -11,7 +11,7 @@
 	},
 	"devDependencies": {
 		"@acab/reset.css": "^0.10.0",
-		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/adapter-netlify": "^4.3.6",
 		"@sveltejs/kit": "^2.8.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"postcss": "latest",
